// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screens/JoinGroup renders correctly 1`] = `
<Card
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 15,
      "padding": 15,
      "width": "90%",
    }
  }
>
  <Typography
    gutterBottom={true}
    type="headline"
  >
    Rejoindre un groupe
  </Typography>
  <br />
  <Typography
    gutterBottom={true}
    type="subheading"
  >
    Rejoignez un groupe pour vous confrontez à vos amis, collègues, familles...
  </Typography>
  <CardContent
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <FormControl
      disabled={undefined}
      fullWidth={true}
    >
      <Select
        fullWidth={true}
        onChange={[Function]}
        value=""
      >
        <MenuItem
          value="AA"
        >
          group 1
        </MenuItem>
        <MenuItem
          value="BB"
        >
          group 2
        </MenuItem>
        <MenuItem
          value="CC"
        >
          group 3
        </MenuItem>
      </Select>
    </FormControl>
    <FormHelperText>
      Rechercher un groupe
    </FormHelperText>
  </CardContent>
  <CardActions>
    <Button
      color="primary"
      disabled={true}
      onClick={[Function]}
      raised={true}
      style={undefined}
    >
      Envoyer la demande
    </Button>
  </CardActions>
</Card>
`;

exports[`screens/JoinGroup renders correctly when disabled 1`] = `
<Card
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 15,
      "padding": 15,
      "width": "90%",
    }
  }
>
  <Typography
    gutterBottom={true}
    type="headline"
  >
    Rejoindre un groupe
  </Typography>
  <br />
  <Typography
    gutterBottom={true}
    type="subheading"
  >
    Rejoignez un groupe pour vous confrontez à vos amis, collègues, familles...
  </Typography>
  <CardContent
    style={
      Object {
        "width": "90%",
      }
    }
  >
    <FormControl
      disabled={true}
      fullWidth={true}
    >
      <Select
        fullWidth={true}
        onChange={[Function]}
        value=""
      >
        <MenuItem
          value="AA"
        >
          group 1
        </MenuItem>
        <MenuItem
          value="BB"
        >
          group 2
        </MenuItem>
        <MenuItem
          value="CC"
        >
          group 3
        </MenuItem>
      </Select>
    </FormControl>
    <FormHelperText>
      Aucun groupe à rejoindre
    </FormHelperText>
  </CardContent>
  <CardActions>
    <Button
      color="primary"
      disabled={true}
      onClick={[Function]}
      raised={true}
      style={undefined}
    >
      Envoyer la demande
    </Button>
  </CardActions>
</Card>
`;
